kubernetes/freedom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: deployment-freedom-freedom
  name: freedom
  namespace: avencera
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deployment-freedom-freedom
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: deployment-freedom-freedom
    spec:
      containers:
        - env:
            - name: SEED_DUMMY_DATA
              value: "true"
            - name: DOMAIN_NAME
              value: freedom.avencera.com
            - name: ENV
              value: prod
            - name: MIX_ENV
              value: prod
            - name: PG_DB
              value: freedom_prod
            - name: PORT
              value: "2384"
            - name: POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
          image: ghcr.io/praveenperera/freedom:master
          imagePullPolicy: Always
          name: freedom
          ports:
            - containerPort: 2384
              name: tcp2384
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: "2.0Gi"
            requests:
              cpu: "350m"
              memory: "200Mi"
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            httpGet:
              path: "/health/ready"
              port: 2384
              httpHeaders:
                - name: "X-Forwarded-Protocol"
                  value: https
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            httpGet:
              path: "/health/live"
              port: 2384
              httpHeaders:
                - name: "X-Forwarded-Protocol"
                  value: https
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: github
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
