kubernetes/freedom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freedom
  namespace: avencera
  annotations: {}
  labels: {}
spec:
  ports:
    - name: tcp2384
      port: 2384
      protocol: TCP
      targetPort: 2384
  selector:
    app: deployment-freedom-freedom
  sessionAffinity: None
  type: ClusterIP
